# whisperkey

./: .gitattributes  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: CLAUDE.md  PRD.md  TASKS.md  TECH_SPEC.md
scripts/: sign.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: public_key.pem
src-tauri/resources/prompts/: custom.md  markdown.md  polish.md  quick_ask.md  raw.md
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/asr/: mod.rs  official.rs  openai.rs  trait.rs  volcengine.rs  xfyun.rs
src-tauri/src/audio/: device_cache.rs  encoder.rs  mod.rs  recorder.rs
src-tauri/src/config/: mod.rs  persist.rs  schema.rs  secrets.rs
src-tauri/src/crypto/: dpapi.rs  mod.rs
src-tauri/src/history/: db.rs  migrations.rs
src-tauri/src/hotkey/: mod.rs  registrar.rs
src-tauri/src/indicator/: mod.rs
src-tauri/src/inject/: clipboard.rs  mod.rs  send_input.rs
src-tauri/src/ipc/: config.rs  history.rs  license.rs  mod.rs  providers.rs  recording.rs
src-tauri/src/license/: activator.rs  codes.rs  fingerprint.rs  mod.rs  verifier.rs
src-tauri/src/llm/: anthropic.rs  deepseek.rs  doubao.rs  ernie.rs  gemini.rs  mod.rs  openai.rs  prompts.rs  qwen.rs  trait.rs
src-tauri/src/log/: mod.rs
src-tauri/src/pipeline/: mod.rs  state_machine.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/util/: focus_app.rs  mod.rs  paths.rs
src-tauri/tests/: it_asr.rs  it_audio.rs  it_config.rs  it_crypto.rs  it_history.rs  it_hotkey.rs  it_inject.rs  it_license.rs  it_llm.rs
src/api/: config.ts  history.ts  license.ts  providers.ts  recording.ts
src/router/: index.ts
(+17 files in other folders)
